...
    final state = ref.watch(accountsProvider);
    final selectForMovements = widget.selectForMovements;

    return Scaffold(
      backgroundColor: Colors.white,
      appBar: BankAppBar(
        title: selectForMovements ? 'Select an account' : 'My accounts',
      ),
      body: SafeArea(
        child: Center(
          child: ConstrainedBox(
            constraints: const BoxConstraints(maxWidth: 720),
            child: Padding(
...
